@@ -23,45 +23,43 @@ import java.io.IOException;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.search.suggest.Lookup;
 import org.apache.lucene.search.suggest.analyzing.AnalyzingInfixSuggester;
-import org.apache.lucene.search.suggest.analyzing.AnalyzingSuggester;
+import org.apache.lucene.search.suggest.analyzing.BlendedInfixSuggester;
+import org.apache.lucene.search.suggest.analyzing.BlendedInfixSuggester.BlenderType;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.schema.FieldType;
-import org.apache.solr.spelling.suggest.LookupFactory;
 
 /**
- * Factory for {@link AnalyzingInfixSuggester}
+ * Factory for {@link BlendedInfixLookupFactory}
  * @lucene.experimental
  */
-public class AnalyzingInfixLookupFactory extends LookupFactory {
-  /**
-   * The analyzer used at "query-time" and "build-time" to analyze suggestions.
-   */
-  protected static final String QUERY_ANALYZER = "suggestAnalyzerFieldType";
-
-  /**
-   * The path where the underlying index is stored
-   * if no index is found, it will be generated by
-   * the AnalyzingInfixSuggester
-   */
-  protected static final String INDEX_PATH = "indexPath";
-
-  /**
-   * Minimum number of leading characters before PrefixQuery is used (default 4). 
-   * Prefixes shorter than this are indexed as character ngrams 
-   * (increasing index size but making lookups faster)
-   */
-  protected static final String MIN_PREFIX_CHARS = "minPrefixChars";
+public class BlendedInfixLookupFactory extends AnalyzingInfixLookupFactory {
   
+  /**
+   * Blender type used to calculate weight coefficient using the position
+   * of the first matching word
+   * </p>
+   * Available blender types are: </br>
+   *  linear: weight*(1 - 0.10*position) [default]</br>
+   *  reciprocal: weight/(1+position) 
+   */
+  private static final String BLENDER_TYPE = "blenderType";
+  
+  /** 
+   * Factor to multiply the number of searched elements
+   * Default is 10
+   */
+  private static final String NUM_FACTOR = "numFactor";
+
   /** 
    * Default path where the index for the suggester is stored/loaded from
    * */
-  private static final String DEFAULT_INDEX_PATH = "analyzingInfixSuggesterIndexDir";
+  private static final String DEFAULT_INDEX_PATH = "blendedInfixSuggesterIndexDir";
 
   /**
    * File name for the automaton.
    */
-  private static final String FILENAME = "iwfsta.bin";
+  private static final String FILENAME = "bifsta.bin";
   
   
   @Override
@@ -88,9 +86,15 @@ public class AnalyzingInfixLookupFactory extends LookupFactory {
     ? Integer.parseInt(params.get(MIN_PREFIX_CHARS).toString())
     : AnalyzingInfixSuggester.DEFAULT_MIN_PREFIX_CHARS;
 
+    BlenderType blenderType = getBlenderType(params.get(BLENDER_TYPE));
+    
+    int numFactor = params.get(NUM_FACTOR) != null
+    ? Integer.parseInt(params.get(NUM_FACTOR).toString())
+    : BlendedInfixSuggester.DEFAULT_NUM_FACTOR;
+    
     try {
-      return new AnalyzingInfixSuggester(core.getSolrConfig().luceneMatchVersion, 
-          new File(indexPath), indexAnalyzer, queryAnalyzer, minPrefixChars);
+      return new BlendedInfixSuggester(core.getSolrConfig().luceneMatchVersion, 
+          new File(indexPath), indexAnalyzer, queryAnalyzer, minPrefixChars, blenderType, numFactor);
     } catch (IOException e) {
       throw new RuntimeException();
     }
@@ -99,5 +103,16 @@ public class AnalyzingInfixLookupFactory extends LookupFactory {
   @Override
   public String storeFileName() {
     return FILENAME;
+  }
+  
+  private BlenderType getBlenderType(Object blenderTypeParam) {
+    BlenderType blenderType = BlenderType.POSITION_LINEAR;
+    if (blenderTypeParam != null) {
+      String blenderTypeStr = blenderTypeParam.toString();
+      if (blenderTypeStr.equalsIgnoreCase("reciprocal")) {
+        blenderType = BlenderType.POSITION_RECIPROCAL;
+      }
+    }
+    return blenderType;
   }
 }
